--- a/angular.json
+++ b/angular.json
@@ -69,6 +69,8 @@
             }
           },
           "defaultConfiguration": "production"
+          
+          
         },
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
@@ -80,7 +82,11 @@
               "browserTarget": "jend:build:development"
             }
           },
-          "defaultConfiguration": "development"
+          "defaultConfiguration": "development",
+          "options": {
+            "proxyConfig": "src/proxy.conf.json"
+          }
+          
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
