updated installation instruction

--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -17,7 +17,7 @@ jobs:
         with:
           node-version: '16'
       - name: 🚧 Install dependencies
-        run: npm install
+        run: npm install --legacy-peer-deps
 
       - name: 🏗️ Build
         run: npm run build -- --prod
