--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -20,7 +20,7 @@ jobs:
         run: npm install --legacy-peer-deps
 
       - name: 🏗️ Build
-        run: ng build --configuration production
+        run: npm run build -- --configuration production
       - name: 📂 Sync files
         uses: SamKirkland/FTP-Deploy-Action@4.3.2
         with:
