--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,6 @@
 {
-    "editor.tabCompletion": "on"
+    "editor.tabCompletion": "on",
+    "githubPullRequests.ignoredPullRequestBranches": [
+        "master"
+    ]
 }
